tring to fix img on iphone

--- a/src/components/Description/Description.css
+++ b/src/components/Description/Description.css
@@ -35,7 +35,7 @@
 }
 
 .text p {
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 
 .download {
@@ -83,6 +83,13 @@
   .imagine {
     padding: 0;
     margin: 0;
+    width: 330px;
+    height: auto;
+  }
+
+  .img-wd{
+      max-width: 100%;
+      max-height: 100%;
   }
 
   .text {
